--- a/src/main/resources/templates/conta2/login.html
+++ b/src/main/resources/templates/conta2/login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/_login}">
+	xmlns:th="http://www.thymeleaf.org" 
+	layout:decorate="~{layout/_login}">
 
 <th:block layout:fragment="conteudo-title">
 	<title>DevWeb - Tecnologia (Login)</title>
