Versão estável do módulo de segurança.

--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -97,12 +97,12 @@
 				<div class="col-md-9">
 					<div class="nav-tabs-custom">
 						<ul class="nav nav-tabs">
-							<li class="active"><a href="#settings" data-toggle="tab">Cadastro</a></li>
+							<li class="active"><a href="#cadastro" data-toggle="tab">Cadastro</a></li>
 							<li><a href="#activity" data-toggle="tab">Activity</a></li>
 							<li><a href="#timeline" data-toggle="tab">Timeline</a></li>
 						</ul>
 						<div class="tab-content">
-							<div class="active tab-pane" id="Cadastro">
+							<div class="active tab-pane" id="cadastro">
 								<form th:object="${segUsuario}" th:action="@{/profile}"
 									method="POST" class="form-horizontal">
 
