--- a/src/main/resources/templates/account/reset.html
+++ b/src/main/resources/templates/account/reset.html
@@ -10,57 +10,43 @@
 		<th:block layout:fragment="page-box">
 			<div class="register-box">
 				<div class="register-logo">
-					<a href="../../index2.html"><b>Admin</b>LTE</a>
+					<a href="/login"><b>DevWeb </b>- Tecnologia</a>
 				</div>
 
 				<div class="register-box-body">
-					<p class="login-box-msg">Register a new membership</p>
-
-					<form action="../../index.html" method="post">
+<!-- 					<p class="login-box-msg">Informe seu e-mail e enviaremos um link para você resetar sua senha. </p> -->
+					<p class="login-box-msg">Informe seu e-mail e enviaremos uma senha padrão.</p>
+					<strong><p class="login-box-msg">Altere sua senha em perfil de Usuário</p></strong>
+					
+					<div class="alert-danger"
+						th:if="${#bools.isTrue(errorMessageEmail)}">
+						<strong th:utext="${errorMessageEmail}"></strong>
+					</div><br>
+					
+					<form th:object="${user}" th:action="@{/reset}" method="post">
+			
 						<div class="form-group has-feedback">
-							<input type="text" class="form-control" placeholder="Full name">
-							<span class="glyphicon glyphicon-user form-control-feedback"></span>
-						</div>
-						<div class="form-group has-feedback">
-							<input type="email" class="form-control" placeholder="Email">
+							
+							<input type="text" class="form-control" th:field="*{email}" placeholder="E-mail" /> 
 							<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+							<label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></label>
 						</div>
-						<div class="form-group has-feedback">
-							<input type="password" class="form-control"
-								placeholder="Password"> <span
-								class="glyphicon glyphicon-lock form-control-feedback"></span>
-						</div>
-						<div class="form-group has-feedback">
-							<input type="password" class="form-control"
-								placeholder="Retype password"> <span
-								class="glyphicon glyphicon-log-in form-control-feedback"></span>
-						</div>
+						
 						<div class="row">
-							<div class="col-xs-8">
-								<div class="checkbox icheck">
-									<label> <input type="checkbox"> I agree to the
-										<a href="#">terms</a>
-									</label>
-								</div>
+							<div class="col-xs-6">
+								
 							</div>
-							<!-- /.col -->
-							<div class="col-xs-4">
-								<button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+							<div class="col-xs-6">
+								<button type="submit" class="btn btn-primary btn-block btn-flat">Enviar</button>
 							</div>
-							<!-- /.col -->
+							
 						</div>
 					</form>
 
-					<div class="social-auth-links text-center">
-						<p>- OR -</p>
-						<a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i
-							class="fa fa-facebook"></i> Sign up using Facebook</a> <a href="#"
-							class="btn btn-block btn-social btn-google btn-flat"><i
-							class="fa fa-google-plus"></i> Sign up using Google+</a>
-					</div>
-
-					<a href="login.html" class="text-center">I already have a
-						membership</a>
+					<br> 
+					<a th:href="@{/login}" class="text-center">Lembrei minha senha!</a><br> 
+					<a th:href="@{/registro}" class="text-center">Não possui cadastro? Registre-se</a>
+					
 				</div>
 				<!-- /.form-box -->
 			</div>
